--- a/emacs-init.org
+++ b/emacs-init.org
@@ -112,14 +112,14 @@
     "machine dependent msmtp executable string")
 
   (defconst ddavis-v-mu-exe
-    (cond (ddavis-v-is-mac "~/Software/mu/releases/master/bin/mu")
+    (cond (ddavis-v-is-mac "~/Software/mu/releases/1.3.9/bin/mu")
           (ddavis-v-is-cc7 "/usr/local/bin/mu")
           (ddavis-v-is-grads-18 "~/Software/localbase/bin/mu")
           (ddavis-v-is-pion "/usr/bin/mu"))
     "machine dependent mu executable string")
 
   (defconst ddavis-v-mu4e-dir
-    (cond (ddavis-v-is-mac "~/Software/mu/releases/master/share/emacs/site-lisp/mu4e")
+    (cond (ddavis-v-is-mac "~/Software/mu/releases/1.3.9/share/emacs/site-lisp/mu4e")
           (ddavis-v-is-grads-18 "~/Software/localbase/share/emacs/site-lisp/mu4e")
           (ddavis-v-is-cc7 "/usr/local/share/emacs/site-lisp/mu4e")
           (ddavis-v-is-pion "/usr/share/emacs/site-lisp/mu4e"))
