--- a/emacs-init.org
+++ b/emacs-init.org
@@ -600,15 +600,17 @@ Add some flyspell hooks for a few modes.
 #+begin_src emacs-lisp :results silent
   (setq custom-safe-themes t)
 
-  ;; currently using my fork of emacs-theme-gruvbox
-  ;; (use-package gruvbox
-  ;;   :load-path "~/Software/emacs-theme-gruvbox"
-  ;;   :demand t)
-  ;; (add-to-list 'custom-theme-load-path "~/Software/emacs-theme-gruvbox")
-  ;; (load-theme 'gruvbox t)
+  ;; currently using my fork of emacs-theme-gruvbox on mac
+  (use-package gruvbox
+    :if ddavis-v-is-mac
+    :load-path "~/.emacs.d/git-repos/emacs-theme-gruvbox"
+    :demand t)
+  (add-to-list 'custom-theme-load-path "~/Software/emacs-theme-gruvbox")
+  (load-theme 'gruvbox t)
 
   (use-package gruvbox-theme
     :ensure t
+    :unless ddavis-v-is-mac
     :config
     (load-theme 'gruvbox t))
 
@@ -702,9 +704,6 @@ Setting up authentication with encryption
 #+end_src
 
 * Misc
-
-Miscellaneous stuff that should probably be better sorted.
-
 ** Bindings
 
 #+begin_src emacs-lisp :results silent
@@ -793,10 +792,13 @@ Miscellaneous stuff that should probably be better sorted.
     :ensure t)
 
   (use-package markdown-mode
-    :ensure t)
+    :ensure t
+    :mode ("\\.md\\'" . markdown-mode))
 
   (use-package yaml-mode
-    :ensure t)
+    :ensure t
+    :mode (("\\.yml\\'" . yaml-mode)
+           ("\\.yaml\\'" . yaml-mode)))
 
   (use-package deadgrep
     :ensure t)
@@ -804,6 +806,24 @@ Miscellaneous stuff that should probably be better sorted.
   (use-package ace-window
     :ensure t
     :bind ("M-o" . 'ace-window))
+
+  (use-package exec-path-from-shell
+    :if (memq window-system '(mac ns x))
+    :ensure t
+    :config
+    (exec-path-from-shell-initialize))
+
+  (use-package diredfl
+    :ensure t
+    :hook (dired-mode . diredfl-mode))
+#+end_src
+
+** Modes
+
+#+begin_src emacs-lisp :results silent
+  (use-package emacs
+    :mode (("mbsyncrc" . conf-mode)
+           ("msmtprc" . conf-mode)))
 #+end_src
 
 * Elfeed
@@ -890,12 +910,6 @@ Some configuration specific to using Emacs on macOS.
     (if (get-buffer "*Group*")
         (switch-to-buffer "*Group*")
       (gnus)))
-
-  (use-package exec-path-from-shell
-    :if (memq window-system '(mac ns))
-    :ensure t
-    :config
-    (exec-path-from-shell-initialize))
 
   (when (memq window-system '(mac ns))
     (setq browse-url-browser-function 'browse-url-default-macosx-browser)
@@ -1287,5 +1301,120 @@ usage of both.
            ("C-h v" . #'helpful-variable)
            ("C-h k" . #'helpful-key)))
 #+end_src
+
+* Hydra
+
+#+begin_src emacs-lisp :results silent
+  (use-package hydra
+    :ensure t)
+#+end_src
+
+** projectile
+
+#+begin_src emacs-lisp :results silent
+  (defhydra hydra-projectile-other-window (:color teal)
+    "projectile-other-window"
+    ("f"  projectile-find-file-other-window        "file")
+    ("g"  projectile-find-file-dwim-other-window   "file dwim")
+    ("d"  projectile-find-dir-other-window         "dir")
+    ("b"  projectile-switch-to-buffer-other-window "buffer")
+    ("q"  nil                                      "cancel" :color blue))
+
+  (defhydra hydra-projectile (:color teal
+                                     :hint nil)
+    "
+       PROJECTILE: %(projectile-project-root)
+
+       Find File            Search/Tags          Buffers                Cache
+  ------------------------------------------------------------------------------------------
+  _s-f_: file            _r_: ripgrep           _i_: Ibuffer           _c_: cache clear
+   _ff_: file dwim       _g_: update gtags      _b_: switch to buffer  _x_: remove known project
+   _fd_: file curr dir   _o_: multi-occur     _s-k_: Kill all buffers  _X_: cleanup non-existing
+    _d_: dir                                                       ^^^^_z_: cache current
+
+  "
+    ("a"   projectile-ag)
+    ("b"   projectile-switch-to-buffer)
+    ("c"   projectile-invalidate-cache)
+    ("d"   projectile-find-dir)
+    ("s-f" projectile-find-file)
+    ("ff"  projectile-find-file-dwim)
+    ("fd"  projectile-find-file-in-directory)
+    ("g"   ggtags-update-tags)
+    ("s-g" ggtags-update-tags)
+    ("i"   projectile-ibuffer)
+    ("K"   projectile-kill-buffers)
+    ("s-k" projectile-kill-buffers)
+    ("m"   projectile-multi-occur)
+    ("o"   projectile-multi-occur)
+    ("s-p" projectile-switch-project "switch project")
+    ("p"   projectile-switch-project)
+    ("s"   projectile-switch-project)
+    ("r"   ddavis/helm-project-search)
+    ("x"   projectile-remove-known-project)
+    ("X"   projectile-cleanup-known-projects)
+    ("z"   projectile-cache-current-file)
+    ("`"   hydra-projectile-other-window/body "other window")
+    ("q"   nil "cancel" :color blue))
+#+end_src
+
+** dired
+
+#+begin_src emacs-lisp :results silent
+  (defhydra hydra-dired (:hint nil :color pink)
+    "
+  _+_ mkdir          _v_iew           _m_ark             _(_ details        _i_nsert-subdir    wdired
+  _C_opy             _O_ view other   _U_nmark all       _)_ omit-mode      _$_ hide-subdir    C-x C-q : edit
+  _D_elete           _o_pen other     _u_nmark           _l_ redisplay      _w_ kill-subdir    C-c C-c : commit
+  _R_ename           _M_ chmod        _t_oggle           _g_ revert buf     _e_ ediff          C-c ESC : abort
+  _Y_ rel symlink    _G_ chgrp        _E_xtension mark   _s_ort             _=_ pdiff
+  _S_ymlink          ^ ^              _F_ind marked      _._ toggle hydra   \\ flyspell
+  _r_sync            ^ ^              ^ ^                ^ ^                _?_ summary
+  _z_ compress-file  _A_ find regexp
+  _Z_ compress       _Q_ repl regexp
+
+  T - tag prefix
+  "
+    ("\\" dired-do-ispell)
+    ("(" dired-hide-details-mode)
+    (")" dired-omit-mode)
+    ("+" dired-create-directory)
+    ("=" diredp-ediff)         ;; smart diff
+    ("?" dired-summary)
+    ("$" diredp-hide-subdir-nomove)
+    ("A" dired-do-find-regexp)
+    ("C" dired-do-copy)        ;; Copy all marked files
+    ("D" dired-do-delete)
+    ("E" dired-mark-extension)
+    ("e" dired-ediff-files)
+    ("F" dired-do-find-marked-files)
+    ("G" dired-do-chgrp)
+    ("g" revert-buffer)        ;; read all directories again (refresh)
+    ("i" dired-maybe-insert-subdir)
+    ("l" dired-do-redisplay)   ;; relist the marked or singel directory
+    ("M" dired-do-chmod)
+    ("m" dired-mark)
+    ("O" dired-display-file)
+    ("o" dired-find-file-other-window)
+    ("Q" dired-do-find-regexp-and-replace)
+    ("R" dired-do-rename)
+    ("r" dired-do-rsynch)
+    ("S" dired-do-symlink)
+    ("s" dired-sort-toggle-or-edit)
+    ("t" dired-toggle-marks)
+    ("U" dired-unmark-all-marks)
+    ("u" dired-unmark)
+    ("v" dired-view-file)      ;; q to exit, s to search, = gets line #
+    ("w" dired-kill-subdir)
+    ("Y" dired-do-relsymlink)
+    ("z" diredp-compress-this-file)
+    ("Z" dired-do-compress)
+    ("q" nil)
+    ("." nil :color blue))
+
+  (define-key dired-mode-map "." 'hydra-dired/body)
+#+end_src
+
+* End
 
 end
