--- a/emacs-init.org
+++ b/emacs-init.org
@@ -1332,7 +1332,6 @@ usage of both.
     _d_: dir                                                       ^^^^_z_: cache current
 
   "
-    ("a"   projectile-ag)
     ("b"   projectile-switch-to-buffer)
     ("c"   projectile-invalidate-cache)
     ("d"   projectile-find-dir)
@@ -1364,13 +1363,13 @@ usage of both.
 #+begin_src emacs-lisp :results silent
   (defhydra hydra-dired (:hint nil :color pink)
     "
-  _+_ mkdir          _v_iew           _m_ark             _(_ details        _i_nsert-subdir    wdired
-  _C_opy             _O_ view other   _U_nmark all       _)_ omit-mode      _$_ hide-subdir    C-x C-q : edit
-  _D_elete           _o_pen other     _u_nmark           _l_ redisplay      _w_ kill-subdir    C-c C-c : commit
-  _R_ename           _M_ chmod        _t_oggle           _g_ revert buf     _e_ ediff          C-c ESC : abort
-  _Y_ rel symlink    _G_ chgrp        _E_xtension mark   _s_ort             _=_ pdiff
-  _S_ymlink          ^ ^              _F_ind marked      _._ toggle hydra   \\ flyspell
-  _r_sync            ^ ^              ^ ^                ^ ^                _?_ summary
+  _+_ mkdir          _v_ view         _m_ mark           _(_ details        _i_ insert-subdir  wdired
+  _C_ copy           _O_ view other   _U_ unmark all     _)_ omit-mode      _$_ hide-subdir    C-x C-q : edit
+  _D_ delete         _o_ open other   _u_ unmark         _l_ redisplay      _w_ kill-subdir    C-c C-c : commit
+  _R_ rename         _M_ chmod        _t_ toggle         _g_ revert buf     _e_ ediff          C-c ESC : abort
+  _Y_ rel symlink    _G_ chgrp        _E_ extension mark _s_ sort           _=_ pdiff
+  _S_ symlink        ^ ^              _F_ find marked    _._ toggle hydra   \\ flyspell
+  _r_ rsync          ^ ^              ^ ^                ^ ^                _?_ summary
   _z_ compress-file  _A_ find regexp
   _Z_ compress       _Q_ repl regexp
 
